// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiBadgeGroup gutterSize none is rendered 1`] = `
<div
  class="ouiBadgeGroup"
/>
`;

exports[`OuiBadgeGroup gutterSize s is rendered 1`] = `
<div
  class="ouiBadgeGroup ouiBadgeGroup--gutterSmall"
/>
`;

exports[`OuiBadgeGroup gutterSize xs is rendered 1`] = `
<div
  class="ouiBadgeGroup ouiBadgeGroup--gutterExtraSmall"
/>
`;

exports[`OuiBadgeGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiBadgeGroup ouiBadgeGroup--gutterExtraSmall testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="ouiBadgeGroup__item"
  >
    <span
      class="ouiBadge ouiBadge--iconLeft"
      style="background-color:#d3dae6;color:#000"
    >
      <span
        class="ouiBadge__content"
      >
        <span
          class="ouiBadge__text"
        >
          Content
        </span>
      </span>
    </span>
  </span>
</div>
`;
